init pack